Character now spawn a weapon class and attaches it to itself.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.17-14.29.03
+CoopGame.TimeStamp=2020.04.17-14.56.30
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1812,6 +1812,16 @@ REINST_BP_Projectile_C_61.ComponentReplication=True
 REINST_BP_Projectile_C_61.Cooking=True
 REINST_BP_Projectile_C_61.Events=True
 BP_PlayerPawn_C.Right Hand Weapon=True
+BP_PlayerPawn_C.Weapon=True
+REINST_BP_PlayerPawn_C_43.Camera=True
+REINST_BP_PlayerPawn_C_43.Tick=True
+REINST_BP_PlayerPawn_C_43.Weapon=True
+REINST_BP_PlayerPawn_C_43.Character=True
+REINST_BP_PlayerPawn_C_43.Pawn=True
+REINST_BP_PlayerPawn_C_43.Rendering=True
+REINST_BP_PlayerPawn_C_43.Replication=True
+REINST_BP_PlayerPawn_C_43.Input=True
+REINST_BP_PlayerPawn_C_43.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
