cleaned weapon code. Created new class for rifle behaviour.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.17-14.56.30
+CoopGame.TimeStamp=2020.04.17-17.23.57
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1822,9 +1822,59 @@ REINST_BP_PlayerPawn_C_43.Rendering=True
 REINST_BP_PlayerPawn_C_43.Replication=True
 REINST_BP_PlayerPawn_C_43.Input=True
 REINST_BP_PlayerPawn_C_43.Actor=True
+BP_Rifle2_C.Tick=True
+BP_Rifle2_C.Weapon=True
+BP_Rifle2_C.Rendering=True
+BP_Rifle2_C.Replication=True
+BP_Rifle2_C.Input=True
+BP_Rifle2_C.Actor=True
+BP_Rifle2_C.Variable=True
+BP_Rifle2_C.TransformCommon=True
+BP_Rifle2_C.Sockets=True
+BP_Rifle2_C.Animation=True
+BP_Rifle2_C.Mesh=True
+BP_Rifle2_C.Clothing=True
+BP_Rifle2_C.MasterPoseComponent=True
+BP_Rifle2_C.Physics=True
+BP_Rifle2_C.Collision=True
+BP_Rifle2_C.ClothingSimulation=True
+BP_Rifle2_C.Lighting=True
+BP_Rifle2_C.Tags=True
+BP_Rifle2_C.ComponentReplication=True
+BP_Rifle2_C.Activation=True
+BP_Rifle2_C.Cooking=True
+BP_Rifle2_C.Events=True
+BP_Rifle2_C.Materials=True
+REINST_BP_Rifle2_C_32.Variable=True
+REINST_BP_Rifle2_C_32.TransformCommon=True
+REINST_BP_Rifle2_C_32.Sockets=True
+REINST_BP_Rifle2_C_32.Animation=True
+REINST_BP_Rifle2_C_32.Mesh=True
+REINST_BP_Rifle2_C_32.Materials=True
+REINST_BP_Rifle2_C_32.Clothing=True
+REINST_BP_Rifle2_C_32.MasterPoseComponent=True
+REINST_BP_Rifle2_C_32.Physics=True
+REINST_BP_Rifle2_C_32.Collision=True
+REINST_BP_Rifle2_C_32.ClothingSimulation=True
+REINST_BP_Rifle2_C_32.Lighting=True
+REINST_BP_Rifle2_C_32.Rendering=True
+REINST_BP_Rifle2_C_32.Tags=True
+REINST_BP_Rifle2_C_32.ComponentReplication=True
+REINST_BP_Rifle2_C_32.Activation=True
+REINST_BP_Rifle2_C_32.Cooking=True
+REINST_BP_Rifle2_C_32.Events=True
+REINST_BP_PlayerPawn_C_40.Camera=True
+REINST_BP_PlayerPawn_C_40.Tick=True
+REINST_BP_PlayerPawn_C_40.Weapon=True
+REINST_BP_PlayerPawn_C_40.Character=True
+REINST_BP_PlayerPawn_C_40.Pawn=True
+REINST_BP_PlayerPawn_C_40.Rendering=True
+REINST_BP_PlayerPawn_C_40.Replication=True
+REINST_BP_PlayerPawn_C_40.Input=True
+REINST_BP_PlayerPawn_C_40.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2018,25 +2068,25 @@ RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/BP_Projectile
-MRUItem2=/Game/Blueprints/BP_Rifle
-MRUItem3=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem4=/Game/Blueprints/BP_TargetDummy
-MRUItem5=/Game/Weapons/Launcher
-MRUItem6=/Game/Weapons/Launcher_Skeleton
-MRUItem7=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem8=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem9=/Game/UI/WBP_SimpleCrosshair
-MRUItem10=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem11=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem12=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
-MRUItem13=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
-MRUItem14=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
-MRUItem15=/Game/Weapons/Effects/BasicTracer/M_Beam
-MRUItem16=/Game/Weapons/Effects/BasicTracer/Beam
-MRUItem17=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem18=/Game/Weapons/SK_Rifle
-MRUItem19=/Game/Weapons/Effects/Muzzle/P_Muzzle_Large
+MRUItem1=/Game/Blueprints/BP_Rifle
+MRUItem2=/Game/Blueprints/BP_Rifle2
+MRUItem3=/Game/Blueprints/BP_Projectile
+MRUItem4=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem5=/Game/Blueprints/BP_TargetDummy
+MRUItem6=/Game/Weapons/Launcher
+MRUItem7=/Game/Weapons/Launcher_Skeleton
+MRUItem8=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem9=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem10=/Game/UI/WBP_SimpleCrosshair
+MRUItem11=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem12=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem13=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem14=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
+MRUItem15=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
+MRUItem16=/Game/Weapons/Effects/BasicTracer/M_Beam
+MRUItem17=/Game/Weapons/Effects/BasicTracer/Beam
+MRUItem18=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem19=/Game/Weapons/SK_Rifle
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
