moved logic from SProjectile to a derived class, SGrenadeProjectile.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.17-17.23.57
+CoopGame.TimeStamp=2020.04.17-17.40.39
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1872,9 +1872,54 @@ REINST_BP_PlayerPawn_C_40.Rendering=True
 REINST_BP_PlayerPawn_C_40.Replication=True
 REINST_BP_PlayerPawn_C_40.Input=True
 REINST_BP_PlayerPawn_C_40.Actor=True
+BP_GrenadeProjectile_C.Tick=True
+BP_GrenadeProjectile_C.Explosion=True
+BP_GrenadeProjectile_C.Projectile=True
+BP_GrenadeProjectile_C.Rendering=True
+BP_GrenadeProjectile_C.Replication=True
+BP_GrenadeProjectile_C.Input=True
+BP_GrenadeProjectile_C.Actor=True
+BP_GrenadeProjectile_C.Variable=True
+BP_GrenadeProjectile_C.TransformCommon=True
+BP_GrenadeProjectile_C.Sockets=True
+BP_GrenadeProjectile_C.StaticMesh=True
+BP_GrenadeProjectile_C.Physics=True
+BP_GrenadeProjectile_C.Collision=True
+BP_GrenadeProjectile_C.Lighting=True
+BP_GrenadeProjectile_C.Tags=True
+BP_GrenadeProjectile_C.ComponentReplication=True
+BP_GrenadeProjectile_C.Cooking=True
+BP_GrenadeProjectile_C.Events=True
+BP_GrenadeProjectile_C.Materials=True
+BP_GrenadeProjectile_C.Shape=True
+BP_GrenadeProjectile_C.Navigation=True
+BP_GrenadeProjectile_C.ProjectileBounces=True
+BP_GrenadeProjectile_C.ProjectileSimulation=True
+BP_GrenadeProjectile_C.Homing=True
+BP_GrenadeProjectile_C.ProjectileInterpolation=True
+BP_GrenadeProjectile_C.Velocity=True
+BP_GrenadeProjectile_C.PlanarMovement=True
+BP_GrenadeProjectile_C.MovementComponent=True
+BP_GrenadeProjectile_C.Activation=True
+REINST_BP_GrenadeLauncher_C_36.Tick=True
+REINST_BP_GrenadeLauncher_C_36.Projectile=True
+REINST_BP_GrenadeLauncher_C_36.Weapon=True
+REINST_BP_GrenadeLauncher_C_36.Rendering=True
+REINST_BP_GrenadeLauncher_C_36.Replication=True
+REINST_BP_GrenadeLauncher_C_36.Input=True
+REINST_BP_GrenadeLauncher_C_36.Actor=True
+REINST_BP_PlayerPawn_C_47.Camera=True
+REINST_BP_PlayerPawn_C_47.Tick=True
+REINST_BP_PlayerPawn_C_47.Weapon=True
+REINST_BP_PlayerPawn_C_47.Character=True
+REINST_BP_PlayerPawn_C_47.Pawn=True
+REINST_BP_PlayerPawn_C_47.Rendering=True
+REINST_BP_PlayerPawn_C_47.Replication=True
+REINST_BP_PlayerPawn_C_47.Input=True
+REINST_BP_PlayerPawn_C_47.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -2068,25 +2113,25 @@ RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/BP_Rifle
-MRUItem2=/Game/Blueprints/BP_Rifle2
+MRUItem1=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem2=/Game/Blueprints/BP_GrenadeProjectile
 MRUItem3=/Game/Blueprints/BP_Projectile
-MRUItem4=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem5=/Game/Blueprints/BP_TargetDummy
-MRUItem6=/Game/Weapons/Launcher
-MRUItem7=/Game/Weapons/Launcher_Skeleton
-MRUItem8=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem9=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem10=/Game/UI/WBP_SimpleCrosshair
-MRUItem11=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem12=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem13=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
-MRUItem14=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
-MRUItem15=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
-MRUItem16=/Game/Weapons/Effects/BasicTracer/M_Beam
-MRUItem17=/Game/Weapons/Effects/BasicTracer/Beam
-MRUItem18=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem19=/Game/Weapons/SK_Rifle
+MRUItem4=/Game/Blueprints/BP_Rifle
+MRUItem5=/Game/Blueprints/BP_Rifle2
+MRUItem6=/Game/Blueprints/BP_TargetDummy
+MRUItem7=/Game/Weapons/Launcher
+MRUItem8=/Game/Weapons/Launcher_Skeleton
+MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem10=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem11=/Game/UI/WBP_SimpleCrosshair
+MRUItem12=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem13=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem14=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem15=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
+MRUItem16=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
+MRUItem17=/Game/Weapons/Effects/BasicTracer/M_Beam
+MRUItem18=/Game/Weapons/Effects/BasicTracer/Beam
+MRUItem19=/Game/Weapons/SK_Rifle_Skeleton
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
