allowed camera shake on recoil. Created blueprint classes representing recoil camera shake for the rifle and grenade launcher

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.17-17.40.39
+CoopGame.TimeStamp=2020.04.17-18.12.32
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1917,6 +1917,50 @@ REINST_BP_PlayerPawn_C_47.Rendering=True
 REINST_BP_PlayerPawn_C_47.Replication=True
 REINST_BP_PlayerPawn_C_47.Input=True
 REINST_BP_PlayerPawn_C_47.Actor=True
+BP_RifleCameraRecoil_C.CameraShake=True
+BP_RifleCameraRecoil_C.Oscillation=True
+BP_RifleCameraRecoil_C.AnimShake=True
+REINST_BP_Rifle_C_40.Tick=True
+REINST_BP_Rifle_C_40.Weapon=True
+REINST_BP_Rifle_C_40.Rendering=True
+REINST_BP_Rifle_C_40.Replication=True
+REINST_BP_Rifle_C_40.Input=True
+REINST_BP_Rifle_C_40.Actor=True
+BP_GrenadeLauncherRecoil_C.CameraShake=True
+BP_GrenadeLauncherRecoil_C.Oscillation=True
+BP_GrenadeLauncherRecoil_C.AnimShake=True
+REINST_BP_PlayerPawn_C_49.Camera=True
+REINST_BP_PlayerPawn_C_49.Tick=True
+REINST_BP_PlayerPawn_C_49.Weapon=True
+REINST_BP_PlayerPawn_C_49.Character=True
+REINST_BP_PlayerPawn_C_49.Pawn=True
+REINST_BP_PlayerPawn_C_49.Rendering=True
+REINST_BP_PlayerPawn_C_49.Replication=True
+REINST_BP_PlayerPawn_C_49.Input=True
+REINST_BP_PlayerPawn_C_49.Actor=True
+REINST_BP_GrenadeLauncher_C_53.Tick=True
+REINST_BP_GrenadeLauncher_C_53.Projectile=True
+REINST_BP_GrenadeLauncher_C_53.Weapon=True
+REINST_BP_GrenadeLauncher_C_53.Rendering=True
+REINST_BP_GrenadeLauncher_C_53.Replication=True
+REINST_BP_GrenadeLauncher_C_53.Input=True
+REINST_BP_GrenadeLauncher_C_53.Actor=True
+REINST_BP_GrenadeLauncher_C_69.Tick=True
+REINST_BP_GrenadeLauncher_C_69.Projectile=True
+REINST_BP_GrenadeLauncher_C_69.Weapon=True
+REINST_BP_GrenadeLauncher_C_69.Rendering=True
+REINST_BP_GrenadeLauncher_C_69.Replication=True
+REINST_BP_GrenadeLauncher_C_69.Input=True
+REINST_BP_GrenadeLauncher_C_69.Actor=True
+REINST_BP_PlayerPawn_C_97.Camera=True
+REINST_BP_PlayerPawn_C_97.Tick=True
+REINST_BP_PlayerPawn_C_97.Weapon=True
+REINST_BP_PlayerPawn_C_97.Character=True
+REINST_BP_PlayerPawn_C_97.Pawn=True
+REINST_BP_PlayerPawn_C_97.Rendering=True
+REINST_BP_PlayerPawn_C_97.Replication=True
+REINST_BP_PlayerPawn_C_97.Input=True
+REINST_BP_PlayerPawn_C_97.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2074,7 +2118,7 @@ ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Renderin
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object=
+Object="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -2103,6 +2147,9 @@ Image=
 Widget=
 Visual=
 StaticMeshActor=
+BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
+CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
+BP_GrenadeLauncherRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
@@ -2112,26 +2159,26 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem2=/Game/Blueprints/BP_GrenadeProjectile
-MRUItem3=/Game/Blueprints/BP_Projectile
-MRUItem4=/Game/Blueprints/BP_Rifle
-MRUItem5=/Game/Blueprints/BP_Rifle2
-MRUItem6=/Game/Blueprints/BP_TargetDummy
-MRUItem7=/Game/Weapons/Launcher
-MRUItem8=/Game/Weapons/Launcher_Skeleton
-MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem10=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem11=/Game/UI/WBP_SimpleCrosshair
-MRUItem12=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem13=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem14=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
-MRUItem15=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
-MRUItem16=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
-MRUItem17=/Game/Weapons/Effects/BasicTracer/M_Beam
-MRUItem18=/Game/Weapons/Effects/BasicTracer/Beam
-MRUItem19=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem0=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem1=/Game/Blueprints/BP_PlayerPawn
+MRUItem2=/Game/Blueprints/BP_GrenadeLauncherRecoil
+MRUItem3=/Game/Blueprints/BP_Rifle
+MRUItem4=/Game/Blueprints/BP_RifleCameraRecoil
+MRUItem5=/Game/Blueprints/BP_GrenadeProjectile
+MRUItem6=/Game/Blueprints/BP_Projectile
+MRUItem7=/Game/Blueprints/BP_Rifle2
+MRUItem8=/Game/Blueprints/BP_TargetDummy
+MRUItem9=/Game/Weapons/Launcher
+MRUItem10=/Game/Weapons/Launcher_Skeleton
+MRUItem11=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem12=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem13=/Game/UI/WBP_SimpleCrosshair
+MRUItem14=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem15=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem16=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem17=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
+MRUItem18=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
+MRUItem19=/Game/Weapons/Effects/BasicTracer/M_Beam
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
