assigned physical materials to head and the rest of the body of the player's pawn.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.17-18.12.32
+CoopGame.TimeStamp=2020.04.17-20.11.01
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -773,6 +773,8 @@ SequencerWidgets.TimeStamp=2019.12.20-23.26.57
 SequencerWidgets.LastCompileMethod=Unknown
 MeshBoneReduction.TimeStamp=2019.12.20-23.26.47
 MeshBoneReduction.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2019.12.20-23.26.52
+PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1961,6 +1963,23 @@ REINST_BP_PlayerPawn_C_97.Rendering=True
 REINST_BP_PlayerPawn_C_97.Replication=True
 REINST_BP_PlayerPawn_C_97.Input=True
 REINST_BP_PlayerPawn_C_97.Actor=True
+REINST_BP_PlayerPawn_C_31.Weapon=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+PhysicalMaterial.PhysicalMaterial=True
+PhysicalMaterial.Advanced=True
+PhysicalMaterial.Destruction=True
+PhysicalMaterial.PhysicalProperties=True
+PhysicalMaterial.Deprecated=True
+SkeletalBodySetup.Physics=True
+SkeletalBodySetup.Collision=True
+SkeletalBodySetup.BodySetup=True
+PhysicsConstraintTemplate.Constraint=True
+PhysicsConstraintTemplate.Constraint Behavior=True
+PhysicsConstraintTemplate.Linear Limits=True
+PhysicsConstraintTemplate.Angular Limits=True
+PhysicsConstraintTemplate.LinearMotor=True
+PhysicsConstraintTemplate.AngularMotor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1996,7 +2015,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Core
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2115,10 +2134,11 @@ K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rend
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
+PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
+Object=
 BP_PlayerPawn_C=
 SCharacter=
 Character=
@@ -2159,26 +2179,26 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem1=/Game/Blueprints/BP_PlayerPawn
-MRUItem2=/Game/Blueprints/BP_GrenadeLauncherRecoil
-MRUItem3=/Game/Blueprints/BP_Rifle
-MRUItem4=/Game/Blueprints/BP_RifleCameraRecoil
-MRUItem5=/Game/Blueprints/BP_GrenadeProjectile
-MRUItem6=/Game/Blueprints/BP_Projectile
-MRUItem7=/Game/Blueprints/BP_Rifle2
-MRUItem8=/Game/Blueprints/BP_TargetDummy
-MRUItem9=/Game/Weapons/Launcher
-MRUItem10=/Game/Weapons/Launcher_Skeleton
-MRUItem11=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem12=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem13=/Game/UI/WBP_SimpleCrosshair
-MRUItem14=/Game/weaponEffects/Muzzle/P_Muzzle_Large
-MRUItem15=/Game/weaponEffects/BloodImpact/P_blood_splash_02
-MRUItem16=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
-MRUItem17=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
-MRUItem18=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail
-MRUItem19=/Game/Weapons/Effects/BasicTracer/M_Beam
+MRUItem0=/Game/Core/PhysMat_FleshDefault
+MRUItem1=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem2=/Game/Blueprints/BP_PlayerPawn
+MRUItem3=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem4=/Game/Blueprints/BP_GrenadeLauncherRecoil
+MRUItem5=/Game/Blueprints/BP_Rifle
+MRUItem6=/Game/Blueprints/BP_RifleCameraRecoil
+MRUItem7=/Game/Blueprints/BP_GrenadeProjectile
+MRUItem8=/Game/Blueprints/BP_Projectile
+MRUItem9=/Game/Blueprints/BP_Rifle2
+MRUItem10=/Game/Blueprints/BP_TargetDummy
+MRUItem11=/Game/Weapons/Launcher
+MRUItem12=/Game/Weapons/Launcher_Skeleton
+MRUItem13=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem14=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem15=/Game/UI/WBP_SimpleCrosshair
+MRUItem16=/Game/weaponEffects/Muzzle/P_Muzzle_Large
+MRUItem17=/Game/weaponEffects/BloodImpact/P_blood_splash_02
+MRUItem18=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
+MRUItem19=/Game/Weapons/Effects/BloodImpact/T_BloodSplat_03_SubUV
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -2200,6 +2220,7 @@ MRUItem19=/Game/Weapons/Effects/BasicTracer/M_Beam
 /Game/Weapons/Launcher_Skeleton.Launcher_Skeleton=0
 /Game/Weapons/Launcher.Launcher=0
 /Game/Blueprints/BP_TargetDummy.BP_TargetDummy=0
+/Game/Core/PhysMat_FleshDefault.PhysMat_FleshDefault=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2230,6 +2251,8 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2237,7 +2260,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
