now the projectiles do bonus damage.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.18-01.43.22
+CoopGame.TimeStamp=2020.04.18-05.02.41
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1995,6 +1995,68 @@ REINST_BP_PlayerPawn_C_39.Rendering=True
 REINST_BP_PlayerPawn_C_39.Replication=True
 REINST_BP_PlayerPawn_C_39.Input=True
 REINST_BP_PlayerPawn_C_39.Actor=True
+BP_GrenadeProjectile_C.ComponentTick=True
+BP_GrenadeProjectile_C.Weapon=True
+REINST_BP_GrenadeProjectile_C_43.Tick=True
+REINST_BP_GrenadeProjectile_C_43.Explosion=True
+REINST_BP_GrenadeProjectile_C_43.Projectile=True
+REINST_BP_GrenadeProjectile_C_43.Weapon=True
+REINST_BP_GrenadeProjectile_C_43.Rendering=True
+REINST_BP_GrenadeProjectile_C_43.Replication=True
+REINST_BP_GrenadeProjectile_C_43.Input=True
+REINST_BP_GrenadeProjectile_C_43.Actor=True
+REINST_BP_GrenadeProjectile_C_35.Tick=True
+REINST_BP_GrenadeProjectile_C_35.Explosion=True
+REINST_BP_GrenadeProjectile_C_35.Projectile=True
+REINST_BP_GrenadeProjectile_C_35.Weapon=True
+REINST_BP_GrenadeProjectile_C_35.Rendering=True
+REINST_BP_GrenadeProjectile_C_35.Replication=True
+REINST_BP_GrenadeProjectile_C_35.Input=True
+REINST_BP_GrenadeProjectile_C_35.Actor=True
+REINST_BP_GrenadeProjectile_C_47.Tick=True
+REINST_BP_GrenadeProjectile_C_47.Explosion=True
+REINST_BP_GrenadeProjectile_C_47.Projectile=True
+REINST_BP_GrenadeProjectile_C_47.Rendering=True
+REINST_BP_GrenadeProjectile_C_47.Replication=True
+REINST_BP_GrenadeProjectile_C_47.Input=True
+REINST_BP_GrenadeProjectile_C_47.Actor=True
+REINST_BP_PlayerPawn_C_51.Camera=True
+REINST_BP_PlayerPawn_C_51.Tick=True
+REINST_BP_PlayerPawn_C_51.Weapon=True
+REINST_BP_PlayerPawn_C_51.Character=True
+REINST_BP_PlayerPawn_C_51.Pawn=True
+REINST_BP_PlayerPawn_C_51.Rendering=True
+REINST_BP_PlayerPawn_C_51.Replication=True
+REINST_BP_PlayerPawn_C_51.Input=True
+REINST_BP_PlayerPawn_C_51.Actor=True
+REINST_BP_GrenadeProjectile_C_39.TransformCommon=True
+REINST_BP_GrenadeProjectile_C_39.StaticMesh=True
+REINST_BP_GrenadeProjectile_C_39.Materials=True
+REINST_BP_GrenadeProjectile_C_39.Explosion=True
+REINST_BP_GrenadeProjectile_C_39.Tick=True
+REINST_BP_GrenadeProjectile_C_39.ComponentTick=True
+REINST_BP_GrenadeProjectile_C_39.Shape=True
+REINST_BP_GrenadeProjectile_C_39.Navigation=True
+REINST_BP_GrenadeProjectile_C_39.Physics=True
+REINST_BP_GrenadeProjectile_C_39.Collision=True
+REINST_BP_GrenadeProjectile_C_39.Lighting=True
+REINST_BP_GrenadeProjectile_C_39.Rendering=True
+REINST_BP_GrenadeProjectile_C_39.Tags=True
+REINST_BP_GrenadeProjectile_C_39.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_39.Variable=True
+REINST_BP_GrenadeProjectile_C_39.Cooking=True
+REINST_BP_GrenadeProjectile_C_39.Projectile=True
+REINST_BP_GrenadeProjectile_C_39.ProjectileBounces=True
+REINST_BP_GrenadeProjectile_C_39.ProjectileSimulation=True
+REINST_BP_GrenadeProjectile_C_39.Homing=True
+REINST_BP_GrenadeProjectile_C_39.ProjectileInterpolation=True
+REINST_BP_GrenadeProjectile_C_39.Velocity=True
+REINST_BP_GrenadeProjectile_C_39.PlanarMovement=True
+REINST_BP_GrenadeProjectile_C_39.MovementComponent=True
+REINST_BP_GrenadeProjectile_C_39.Activation=True
+REINST_BP_GrenadeProjectile_C_39.Replication=True
+REINST_BP_GrenadeProjectile_C_39.Input=True
+REINST_BP_GrenadeProjectile_C_39.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2144,12 +2206,13 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bi
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,
-BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
+BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
 K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
+BP_GrenadeProjectile_C=BP_GrenadeProjectile_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -2168,12 +2231,12 @@ REINST_BP_PlayerPawn_C_25="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_PlayerPawn_C_29="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -2185,26 +2248,30 @@ StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 BP_GrenadeLauncherRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
+BP_GrenadeProjectile_C=
+SGrenadeProjectile=
+SProjectile=
+REINST_BP_GrenadeProjectile_C_31="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/BP_Projectile.BP_Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher;
 RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
-RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_TargetDummy
+MRUItem0=/Game/Blueprints/BP_GrenadeProjectile
 MRUItem1=/Game/Blueprints/BP_PlayerPawn
-MRUItem2=/Game/Blueprints/BP_Rifle
-MRUItem3=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem4=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem5=/Game/Core/PhysMat_FleshVulnerable
-MRUItem6=/Game/Core/PhysMat_FleshDefault
-MRUItem7=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem8=/Game/Blueprints/BP_GrenadeLauncherRecoil
-MRUItem9=/Game/Blueprints/BP_RifleCameraRecoil
-MRUItem10=/Game/Blueprints/BP_GrenadeProjectile
+MRUItem2=/Game/Blueprints/BP_TargetDummy
+MRUItem3=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem4=/Game/Blueprints/BP_Rifle
+MRUItem5=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem7=/Game/Core/PhysMat_FleshVulnerable
+MRUItem8=/Game/Core/PhysMat_FleshDefault
+MRUItem9=/Game/Blueprints/BP_GrenadeLauncherRecoil
+MRUItem10=/Game/Blueprints/BP_RifleCameraRecoil
 MRUItem11=/Game/Blueprints/BP_Projectile
 MRUItem12=/Game/Blueprints/BP_Rifle2
 MRUItem13=/Game/Weapons/Launcher
@@ -2237,6 +2304,8 @@ MRUItem19=/Game/Weapons/Effects/BloodImpact/P_blood_splash_02
 /Game/Blueprints/BP_TargetDummy.BP_TargetDummy=0
 /Game/Core/PhysMat_FleshDefault.PhysMat_FleshDefault=0
 /Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset=0
+/Game/Blueprints/BP_GrenadeLauncher.BP_GrenadeLauncher=0
+/Game/Blueprints/BP_GrenadeProjectile.BP_GrenadeProjectile=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2424,5 +2493,6 @@ CurveVisibility=SelectedCurves
 
 [DetailCategoriesAdvanced]
 BP_Projectile_C.Shape=True
+BP_GrenadeProjectile_C.Collision=True
 
 
