--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.18-05.02.41
+CoopGame.TimeStamp=2020.04.18-15.05.19
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2251,7 +2251,7 @@ BP_GrenadeLauncherRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscil
 BP_GrenadeProjectile_C=
 SGrenadeProjectile=
 SProjectile=
-REINST_BP_GrenadeProjectile_C_31="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+REINST_BP_GrenadeProjectile_C_31=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
