now weapons are able to set a rate of fire.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.18-19.08.05
+CoopGame.TimeStamp=2020.04.18-20.27.44
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2057,6 +2057,22 @@ REINST_BP_GrenadeProjectile_C_39.Activation=True
 REINST_BP_GrenadeProjectile_C_39.Replication=True
 REINST_BP_GrenadeProjectile_C_39.Input=True
 REINST_BP_GrenadeProjectile_C_39.Actor=True
+REINST_BP_GrenadeLauncher_C_31.Tick=True
+REINST_BP_GrenadeLauncher_C_31.Projectile=True
+REINST_BP_GrenadeLauncher_C_31.Weapon=True
+REINST_BP_GrenadeLauncher_C_31.Rendering=True
+REINST_BP_GrenadeLauncher_C_31.Replication=True
+REINST_BP_GrenadeLauncher_C_31.Input=True
+REINST_BP_GrenadeLauncher_C_31.Actor=True
+REINST_BP_PlayerPawn_C_35.Camera=True
+REINST_BP_PlayerPawn_C_35.Tick=True
+REINST_BP_PlayerPawn_C_35.Weapon=True
+REINST_BP_PlayerPawn_C_35.Character=True
+REINST_BP_PlayerPawn_C_35.Pawn=True
+REINST_BP_PlayerPawn_C_35.Rendering=True
+REINST_BP_PlayerPawn_C_35.Replication=True
+REINST_BP_PlayerPawn_C_35.Input=True
+REINST_BP_PlayerPawn_C_35.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -2262,10 +2278,10 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/BP_GrenadeProjectile
-MRUItem2=/Game/Blueprints/BP_TargetDummy
-MRUItem3=/Game/Blueprints/BP_GrenadeLauncher
-MRUItem4=/Game/Blueprints/BP_Rifle
+MRUItem1=/Game/Blueprints/BP_Rifle
+MRUItem2=/Game/Blueprints/BP_GrenadeLauncher
+MRUItem3=/Game/Blueprints/BP_GrenadeProjectile
+MRUItem4=/Game/Blueprints/BP_TargetDummy
 MRUItem5=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
 MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
 MRUItem7=/Game/Core/PhysMat_FleshVulnerable
